--- a/app/src/main/res/layout/activity_edit__sudoku_.xml
+++ b/app/src/main/res/layout/activity_edit__sudoku_.xml
@@ -17,4 +17,16 @@
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="102dp"
+        android:layout_marginTop="314dp" />
 </android.support.constraint.ConstraintLayout>
